--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import "fonts";
+/* @import "fonts"; */
 
 body {
 	height: 100%;
@@ -11,6 +11,7 @@ div {
 
 .text {
 	color: black;
-	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+/* 	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; */
+	font-family: 'Montserrat';
 	text-decoration: none;
 }
