--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,8 @@ div {
 	font-family: 'Montserrat';
 	text-decoration: none;
 }
+
+.container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
