--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,14 @@ div {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 }
+
+.about-me {
+	height: 100%;
+	width: 50%;
+}
+
+.photos {
+	height: 100%;
+	width: 50%;
+	
+}
