--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,9 @@ div {
 
 .flex-container {
 	display: flex;
-	min-height: 100vh;
+   	min-height: 100%;
+   	width: 100%;
+   	height: 100%; /* NEW */
 }
 
 .about-me .photos {
