--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,15 @@ div {
 	text-decoration: none;
 }
 
-.flex-container {
+/* .flex-container {
 	display: flex;
    	min-height: 100%;
    	width: 100%;
    	height: 100%; /* NEW */
-}
+} */
 
 .about-me .photos {
-	flex: 1;
+	display: inline-block;
+	width: 50%;
+	height: 100%;
 }
