--- a/styles.css
+++ b/styles.css
@@ -24,15 +24,13 @@ body {
 } */
 
 #left {
-/* 	display: inline-block; */
+	display: inline-block;
 	width: 50%;
 	height: 100%;
-	float: left
 }
 
 #right {
-/* 	display: inline-block; */
+	display: inline-block;
 	width: 50%;
 	height: 100%;
-	float: right
 }
