--- a/styles.css
+++ b/styles.css
@@ -15,38 +15,9 @@ body {
 	font-family: 'Montserrat';
 	text-decoration: none;
 }
-
-/* .flex-container {
-	display: flex;
-   	min-height: 100%;
-   	width: 100%;
-   	height: 100%; /* NEW */
-} */
-
-/* #div3 {
-	background: blue;
-	display: inline-block;
-	width: 50%;
-	height: 100%;
-}
-
-#div2 {
-	background: red;
-	display: inline-block;
-	width: 50%;
-	height: 100%;
-} */
-
-/* .flex-container {
-	display: flex;
-}
-
-.flex-child {
-	flex: 1;
-} */
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+div {
+        float: left;
+        height: 470px;
+        width: 50%;
+        padding: 0 0;
 }
