--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,9 @@ div {
         width: 50%;
         padding: 0 0;
 }
+
+#boxes {
+        content: "";
+        display: table;
+        clear: both;
+}
