--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
 	background: #EEEFEB;
 	color: black;
 	font-family: 'Montserrat';
-	text-decoration: none;
 }
 
 /* .text {
@@ -64,5 +63,6 @@ a {
 	display: inline-block;
 	padding: 0, 4vw;
 	text-decoration: none;
+	color: inherit;
 }
 
