--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/* html {
-    height: 100%;
-} */
-
 body {
 	height: 100vh;
 	background: #EEEFEB;
@@ -9,30 +5,20 @@ body {
 	font-family: 'Montserrat';
 }
 
-/* .text {
-	color: black;
-/* 	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; */
-	font-family: 'Montserrat';
-	text-decoration: none;
-} */
-
 #boxes {
         content: "";
         display: table;
         clear: both;
 }
 
-/* can i take some of this out? */
 div {
         height: 100vh;
-/*         padding: 0 0; */
 }
 
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-/*   width: 50%; */
 }
 
 nav {
@@ -40,22 +26,12 @@ nav {
 	margin: 2.5vh, 0;
 }
 
-#outer-div {
-/* 	width: 100%; */
-/* 	overflow: auto; */
-}
-
 #about-me {
 	float: left; 
 	width: 60%;
 	margin-top: 5vh;
-	text-align: center;
-	
+	text-align: center;	
 }
-
-/* #about-me-text {
-	background: #FAFAFA;
-} */
 
 #photos {
 	float: right; 
@@ -69,8 +45,7 @@ a {
 	color: inherit;
 }
 
-#headshot {
-	margin: 5vh, 5vw;
-	
+h1 {
+	text-align: center;
 }
 
