--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,8 @@ h1 {
 	text-align: center;
 }
 
-nav ul li {
-	padding: 0;
-	list-style-type: none;
+nav ul {
+  list-style-position: inside;
+  padding-left: 0;
 }
 
