--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,11 @@ h1 {
 nav ul {
   list-style: none;
   padding-left: 0;
+  display: flex;
 }
 
 nav ul li {
   list-style: none;
   padding-left: 0;
-  float: left;
 }
 
