--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,11 @@ nav ul {
   list-style: none;
   padding-left: 0;
   display: flex;
+  justify-content: center;
 }
 
 nav ul li {
-  list-style: none;
+  list-style-type: none;
   padding-left: 0;
 }
 
