--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@ nav ul {
   justify-content: center;
 }
 
-nav ul li {
+/* nav ul li {
   list-style-type: none;
   display: inline-block;
   margin: 0, 5vw;
-}
+} */
 
