--- a/styles.css
+++ b/styles.css
@@ -51,12 +51,21 @@ h1 {
 	text-align: center;
 }
 
-nav ul {
+/* nav ul {
   list-style: none;
   padding-left: 0;
   display: flex;
   justify-content: center;
-}
+} */
+
+nav ul {
+    display: flex;
+    justify-content: center;
+  }
+
+nav ul li a {
+    padding: 15px;
+ }
 
 /* nav ul li {
   list-style-type: none;
