--- a/styles.css
+++ b/styles.css
@@ -51,18 +51,11 @@ h1 {
 	text-align: center;
 }
 
-/* nav ul {
-  list-style: none;
-  padding-left: 0;
-  display: flex;
-  justify-content: center;
-} */
-
 nav ul {
     display: flex;
     justify-content: center;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
   }
 
 nav ul li {
@@ -71,12 +64,5 @@ nav ul li {
 }
 
 nav ul li a {
-    padding: 15px;
+    padding: 5%;
  }
-
-/* nav ul li {
-  list-style-type: none;
-  display: inline-block;
-  margin: 0, 5vw;
-} */
-
