--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,12 @@ nav {
 #photos {
 	float: right; 
 	width: 40%;
+	.grid-container {
+  	display: grid;
+  	grid-template-columns: 1fr, 1fr;
+  	grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr;
+}
+
 }
 
 a {
