--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,8 @@ nav {
 	width: 40%;
 	.grid-container {
   	display: grid;
-  	grid-template-columns: 1fr, 1fr;
-  	grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr;
+  	grid-template-columns: 1fr, 1fr, 1fr;
+  	grid-template-rows: 1fr, 1fr, 1fr, 1fr;
 }
 
 }
