--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ nav {
   	display: grid;
   	grid-template-columns: 1fr, 1fr, 1fr;
   	grid-template-rows: 1fr, 1fr, 1fr, 1fr;
+	grid-gap: 15px;
 }
 
 }
