--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,8 @@ nav {
 }
 
 a {
-/* 	display: inline-block; */
-/* 	padding: 0, 4vw; */
+	display: inline-block;
+	padding: 0, 4vw;
 	text-decoration: none;
 	color: inherit;
 }
