--- a/styles.css
+++ b/styles.css
@@ -39,15 +39,15 @@ nav {
 	float: right; 
 	width: 40%;
   	display: grid;
-  	grid-template-columns: 1fr, 1fr, 1fr;
-  	grid-template-rows: 1fr, 1fr, 1fr, 1fr;
+  	grid-template-columns: repeat(3, 1fr);
+  	grid-template-rows: repeat(4, 1fr);
 	grid-gap: 15px;
 }
 	
 #photos img {
-	width: 1fr;
-	height: 1fr;
-	object-fit: contain;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 a {
