--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,8 @@ img {
 	filter: brightness(80%);
 }
 
-#outer-div {
+/* #outer-div {
 	display: flex;
 	justify-content: center;
-	width: 50%;
+	width: 50%; */
 }
