--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
  background-image: url('images/siam_point.jpg');
- background-size: contain;
+ background-size: 100% 100%;
  background-repeat: no-repeat;
 }
