--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+ height: 50vh;
  background-image: url('images/siam_point.jpg');
  background-size: 100% 100%;
  background-repeat: no-repeat;
