--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,12 @@ footer img {
 	width: 100%;
 }
 
+#free-time {
+	text-align: center;
+	font-size : 2.3vmin;
+	margin: 2em;
+}
+
 @media screen and (max-width: 430px) {
 
 	#desktop-nav {
