--- a/styles.css
+++ b/styles.css
@@ -128,11 +128,18 @@ img {
 	margin: 5%;
 	padding: 5%; */
 }
+
 #photos div img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
+
+/* div img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+} */
 
 a {
 	display: inline-block;
@@ -263,25 +270,22 @@ td {
 	display: none;
 }
 
-#footer-container {
-	position: relative;
+/* #footer-container {
 	height: 30vh;
+	position: absolute;
+	bottom: 0;
 }
 
 .container {
-	/* width: inherit; */
 	display: flex;
 	flex-direction: row;
-	flex-wrap: nowrap;
 	justify-content: center;
-    /* max-width:  */
 	gap: 1.5%;
-	position: absolute;
+	position: relative;
 	bottom: 0;
-	clear: both;
 	margin-bottom: 2%;
 	margin-top: 10px;
-}
+} */
 
 footer div div {
 	width: 15%;
@@ -297,8 +301,57 @@ footer img {
 #free-time {
 	text-align: center;
 	font-size : 2.3vmin;
-	margin: 2em;
+	padding: 2vh 0;
+	clear: both;
+	/* position: relative;
+	top: 20px; */
+	/* bottom: 5vh; */
+	/* NEW */
+	/* display: inline-block; */
 }
+
+#footer-container-mobile {
+	display: none;
+}
+
+#footer-container {
+	/* float: center;
+	width: 85%;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(2, 1fr); */
+	/* --gap: 1.5%; */
+	--num-cols: 6;
+	/* --column-width: 15%; */
+	box-sizing: border-box;
+	padding: var(--gap);
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: repeat(1, 1fr);
+	gap: 1.5%;
+	clear: both;
+	padding-bottom: 2vh;
+	/* NEW */
+	/* display: inline-block; */
+}
+
+#footer-container div img {
+	width: 100%;
+	/* height: auto; */
+}
+
+/* NEW
+#bottom-part {
+	display: flex;
+	justify-content: space-between;
+} */
+
+/* @media screen and (min-aspect-ratio: 790/490) {
+	#free-time {
+		position: relative;
+		bottom: 15vh; 
+	}
+} */
 
 @media screen and (max-width: 430px) {
 
@@ -308,9 +361,14 @@ footer img {
 
 	div h1 {
 		position: relative;
-		top: 50px;
+		top: 40px;
 		padding: 15px;
 	}
+
+	/* #footer-container {
+		position: relative;
+		top: 20px;
+	} */
 
 	.menu-icon {
 		/* height: inherit;
@@ -409,6 +467,36 @@ footer img {
 		display: block;
 		width: 100%;
 		z-index: 100;
+	}
+
+	#footer-container {
+		display: none;
+	}
+
+	#footer-container-mobile {
+		/* float: center;
+		width: 85%;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: repeat(2, 1fr); */
+		/* --gap: 1.5%; */
+		--num-cols: 3;
+		--column-width: 15%;
+		box-sizing: border-box;
+		padding: var(--gap);
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+		gap: 1.5%;
+		clear: both;
+		padding-bottom: 2vh;
+		/* NEW */
+		/* display: inline-block; */
+	}
+
+	#footer-container-mobile div img {
+		width: 100%;
+		/* height: auto; */
 	}
 
 }
